argocd/argocd-ingressroutes.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-ingressroute-http
spec:
  entryPoints:
    - web
  routes:
  - kind: Rule
    match: Host(`argocd.homelab.bowmans.site`)
    priority: 10
    middlewares:
      - name: redirect-http-https
    services:
    - kind: Service
      name: argocd-server
      port: http
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-ingressroute-https
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: Host(`argocd.homelab.bowmans.site`)
    priority: 10
    services:
    - kind: Service
      name: argocd-server
      port: http
  - kind: Rule
    match: >-
      Host(`argocd.homelab.bowmans.site`) &&
      Headers(`Content-Type`, `application/grpc`)
    priority: 11
    services:
    - kind: Service
      name: argocd-server
      port: http
      scheme: h2c
  tls:
    secretName: argocd-certificate
